Add styles for button start

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     Andrew's and Lana's Tetris R
   </h1>
   <h3>Score: <span id="score">0</span></h3>
+  <button class='start' id='start-button'>Start!</button>
 
 
   <div class="grid" id="grid">
