--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <script type="module" src="./index.js"></script>
+  <script type="module" src="./bundle.js"></script>
   <link rel="stylesheet" href="assets/styles.css">
   </link>
   <title>Tetris</title>
