--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <h1>
-    Andrew's and Lana's Tetris R
+    Andrew and Lana's Tetris R
   </h1>
   <h3>Score: <span id="score">0</span></h3>
   <button class='start' id='start-button'>Start!</button>
