Game Over: handling and display. Fixes #3

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     Andrew and Lana's Tetris
   </h1>
   <h3>Score: <span id="score">0</span></h3>
-  <button class='start' id='start-button'>Start!</button>
+  <!-- <button class='start' id='start-button'>Start!</button> -->
 
   <div class="grid" id="grid">
   </div>
@@ -29,8 +29,10 @@
 
   </script>
 
-  <div class="pauseLabel hidden">
-    <div id="pauseLabel">Paused</div>
+  <div class="centerLabel hidden">
+    <div><button class='start hidden' id='start-button'>Restart!</button>
+      <div id="label">Paused</div>
+    </div>
   </div>
 </body>
 
