Andrew's requests. Add resume button. Rearenge elements.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
   </script>
 
   <div class="centerLabel hidden">
-    <div><button class='start hidden' id='start-button'>Restart!</button>
+    <div>
       <div id="label">Paused</div>
+      <button class='start hidden' id='start-button'>Restart!</button>
+      <button class='start hidden' id='resume-button'>Resume</button>
     </div>
   </div>
 </body>
