--- a/index.html
+++ b/index.html
@@ -16,19 +16,26 @@
   <h3>Score: <span id="score">0</span></h3>
   <!-- <button class='start' id='start-button'>Start!</button> -->
 
-  <div class="grid" id="grid">
+  <div class="grid next-piece" id="next-piece">
+    <script lang="javascript">
+      let container = document.getElementById('next-piece');
+      for (i = 0; i < 16; i++) {
+        container.appendChild(document.createElement('div'));
+      }
+    </script>
   </div>
+
+  <div class="grid game" id="grid">
+    <script lang="javascript">
+      container = document.getElementById('grid');
+      for (i = 0; i < 200; i++) {
+        container.appendChild(document.createElement('div'));
+      }
+    </script>
+  </div>
+
   <h5 class="yellow">Press escape button to pause the game.</h5>
   <h5 class="grey">Svitlana Dzyuban &copy; 2020</h5>
-  <script lang="javascript">
-
-    let container = document.getElementById('grid')
-    for (i = 0; i < 200; i++) {
-      container.appendChild(document.createElement('div'));
-    }
-
-  </script>
-
   <div class="centerLabel hidden">
     <div>
       <div id="label">Paused</div>
