Add little style.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <script type="module" src="./bundle.js"></script>
   <link rel="stylesheet" href="assets/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   </link>
   <title>Tetris</title>
 </head>
@@ -35,7 +36,7 @@
   </div>
 
   <h5 class="yellow">Press escape button to pause the game.</h5>
-  <h5 class="grey">Svitlana Dzyuban &copy; 2020</h5>
+  <p class="grey">Svitlana Dzyuban &copy; 2020</p>
   <div class="centerLabel hidden">
     <div>
       <div id="label">Paused</div>
