Add levels, recalculate speed and levels updates. Closes #7

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     Andrew and Lana's Tetris
   </h1>
   <h3>Score: <span id="score">0</span></h3>
+  <h3>Level: <span id="level">1</span></h3>
   <!-- <button class='start' id='start-button'>Start!</button> -->
 
   <div class="grid next-piece" id="next-piece">
