Trying absolute urls

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 </head>
 
 <body>
-  <audio id="bg_music_1" src="/assets/music/tetris-gameboy-01.mp3" type="audio/mpeg"></audio>
+  <audio id="bg_music_1" src="https://github.com/lanadz/tetris/blob/master/assets/music/tetris-gameboy-01.mp3" type="audio/mpeg"></audio>
 
-  <audio id="bg_music_2"src="/assets/music/tetris-gameboy-02.mp3" type="audio/mpeg"></audio>
+  <audio id="bg_music_2"src="https://github.com/lanadz/tetris/blob/master/assets/music/tetris-gameboy-02.mp3" type="audio/mpeg"></audio>
 
-  <audio id="bg_music_3"src="/assets/music/tetris-gameboy-03.mp3" type="audio/mpeg"></audio>
+  <audio id="bg_music_3"src="https://github.com/lanadz/tetris/blob/master/assets/music/tetris-gameboy-03.mp3" type="audio/mpeg"></audio>
 
-  <audio id="bg_music_4"src="/assets/music/tetris-gameboy-04.mp3" type="audio/mpeg"></audio>
+  <audio id="bg_music_4"src="https://github.com/lanadz/tetris/blob/master/assets/music/tetris-gameboy-04.mp3" type="audio/mpeg"></audio>
 
-  <audio id="bg_music_5"src="/assets/music/tetris-gameboy-05.mp3" type="audio/mpeg"></audio>
+  <audio id="bg_music_5"src="https://github.com/lanadz/tetris/blob/master/assets/music/tetris-gameboy-05.mp3" type="audio/mpeg"></audio>
 
-  <audio id="music_down"src="/assets/music/down.wav"></audio>
+  <audio id="music_down"src="https://github.com/lanadz/tetris/blob/master/assets/music/down.wav"></audio>
 
-  <audio id="music_line"src="/assets/music/line.wav"></audio>
+  <audio id="music_line"src="https://github.com/lanadz/tetris/blob/master/assets/music/line.wav"></audio>
 
-  <audio id="music_side"src="/assets/music/side.wav"></audio>
+  <audio id="music_side"src="https://github.com/lanadz/tetris/blob/master/assets/music/side.wav"></audio>
 
   <h1>
     Tetris
